returned project.clj to nominal state